public/css/main.scss
/* ... */
.skill-label {
  display: inline-block;
  padding: 5px;
  margin: 5px;
  border: 1px solid black;
  background-color: #efefef;
  border-radius: 5px;
}

.skill-select {
  .skill-label.selected {
    color: white;
    background-color: black;
  }
}

.user-list {
  margin-top: 20px;
}

.user-card {
  padding: 0px 6px 6px 6px;
  box-shadow: 1px 1px 2px gray;
  font-family: Avenir;

  .bookmark {
    width: 50px;
    float: left;
    margin: -2px 0px 0px -5px;
  }

  .profile-info {
    padding: 10px;
    background-color: white;

    .profile-pic {
      width: 100px;
      height: 100px;
      border-radius: 50%;
      border: 2px black solid;
      background-size: cover;
      background-position: center;
      margin: 0 auto;
    }

    .name-location {
      clear: both;
      text-align: center;
      white-space: nowrap;

      h3 {
        text-transform: uppercase;
        letter-spacing: 4px;
        margin: 10px 0;
      }

      h4 {
        font-size: 14px;
      }

      .distance {
        margin: 5px 0;
        font-size: 12px;
      }
    }

    .skill-icons {
      overflow: hidden;
      padding-top: 10px;
      .skill-label {
        &.highlight {
          box-shadow: 0px 0px 5px 5px rgba(255, 255, 190, 1);
        }
      }
    }

    hr {
      border-top: 1px dashed lightgray;
      margin: 0px -20px;
    }

    p {
      color: #18bc9c;
      margin-top: 5px;
    }

    .popover {
      width: 50%;
    }
  }

  .about-me{
    text-align: center;
    font-weight:bold;
  }

  .about-me-note{
    padding: 0px 6px 15px 6px;
    text-align: center;
  }

  .action-calls {
    text-align: center;
    width: 100%;
    padding: 10px 0px;
    text-transform: uppercase;
    box-shadow: 1px 1px 2px gray;
  }
}


.white, .white a {
  color: #fff;
}


#requestModal {
  .profile-request-form {
    margin: 20px auto 0 auto;
    width: 90%;
  }

  #submit-skill-request {
    width: 80%;
  }
}

.modal-title {
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
}

.modal-footer {
  text-align: center;
}

// Account page

.edit-profile-page {

  .form-group .radio {
    padding: 11px 0;
    background-color: white;
    text-align: center;
    border: 1px solid gray;
    &.selected {
      background-color: gray;
    }
  }

  input.activity-checkbox {
    margin-right: 10px;
  }

  .user-activities {
    padding-left: 0px;
  }

  .btn-social {
    margin-bottom: 20px;
  }

  .account-profile-pic {
    position: relative;
    display: inline-block;

    &:hover {
      cursor: pointer;

      .upload-message {
        display: block;
      }
    }
  }

  .upload-message {
    display: none;
    position: absolute;
    bottom: 10px;
    left: 10%;
    padding: 2px;
    text-align: center;
    width: 80%;
    background-color: #203049;
    color: white;
    font-weight: 600;
    border: 1px solid black;
    border-radius: 4px;
  }
}


// Profile page

.user-profile {
  margin: 0 10%;
  img.profile-pic {
    width: 30%;
    display: inline-block;
  }

  .bio {
    display: inline-block;
    margin-left: 10%;
    vertical-align: middle;
    .place {
      font-size: 13px;
    }
  }

  .row {
    margin-top: 10px;
    margin-bottom: 10px;
    &:nth-child(1) {
      @media (min-width: $screen-md) {
        display: flex;
      }
      .first-box {
        display: flex;
        flex-direction: column;
        > .box {
          flex: 1;
        }
      }
    }
  }

  .skills-box {
    &:nth-child(2) {
      padding-top: 10px;
    }
    .box {
      height: 100%;
    }
  }

  .box {
    background-color: white;
    border-radius: 5px;
    border: 1px solid lightgray;
    padding: 10px 20px;
  }


  .btn-primary {
    width: 100%;
    margin-top: 10px;
    text-transform: uppercase;
    @media (max-width: $screen-sm) {
      margin-bottom: 10px;
    }
  }

  .review {
    margin: 30px 0;
    .profile-pic {
      position: relative;
      width: 50px;
      height: 50px;
      overflow: hidden;
      border-radius: 50%;
      img {
        position: absolute;
        left: 50%;
        top: 50%;
        height: 100%;
        width: auto;
        -webkit-transform: translate(-50%,-50%);
            -ms-transform: translate(-50%,-50%);
                transform: translate(-50%,-50%);
      }
    }
    .identity {
      text-align: center;
      display: inline-block;
    }
    .review-content {
      display: inline-block;
      vertical-align: top;
      margin-left: 30px;
      .rating {
        display: inline-block;
      }
      quote {
        display: block;
      }
      .breaker {
        margin: 0 10px;
      }
    }
  }
}

.review {
  padding: 0 5px 10px 5px;
  text-align: left;
  .rating span {
    color: gold;
  }
  .review-timestamp {
    display: block;
    font-size: 10px;
    margin-bottom: 10px;
  }
}
/* ... */

